tests not passing following move to new security schema