@@ -1,7 +1,6 @@
 package com.github.ikarita.server.service.user;
 
 import com.github.ikarita.server.model.dto.user.NewCommunityUserRoleDto;
-import com.github.ikarita.server.model.dto.user.NewUserDto;
 import com.github.ikarita.server.model.dto.user.UserDto;
 import com.github.ikarita.server.model.entities.community.CommunityRole;
 import com.github.ikarita.server.model.entities.user.CommunityUser;
@@ -13,34 +12,22 @@ import com.github.ikarita.server.repository.user.CommunityUserRepository;
 import com.github.ikarita.server.repository.user.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
 @Slf4j
-public class UserServiceImpl implements UserService {
+public class DataUserServiceImpl implements DataUserService {
     private final UserRepository userRepository;
     private final CommunityRoleRepository communityRoleRepository;
     private final CommunityUserRepository communityUserRepository;
     private final UserMapper userMapper;
-
-    private final PasswordEncoder passwordEncoder;
-
-    @Override
-    public UserDto createUser(NewUserDto newUserDto) {
-        log.info("Saving user '{}'", newUserDto.getUsername());
-        newUserDto.setPassword(passwordEncoder.encode(newUserDto.getPassword()));
-        final LocalUser localUserEntity = userRepository.save(userMapper.asEntity(newUserDto));
-        return userMapper.asDto(localUserEntity);
-    }
 
     @Override
     public UserDto addCommunityRole(NewCommunityUserRoleDto roleForUser) {
@@ -102,7 +89,7 @@ public class UserServiceImpl implements UserService {
         log.info("Getting all users");
         return userRepository.findAll().stream()
                 .map(userMapper::asDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
